--- a/MyProject.html
+++ b/MyProject.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Project</title>
-    <link rel="stylesheet" href="./style.css"/>
-    <link rel="stylesheet" href="./main.gallery.css"
+    <link rel="stylesheet" href="./dist/style.css"/>
+    <link rel="stylesheet" href="./main.gallery.css"/>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class="logo">
             <img src="./netflix.png" alt="netflix"/>
         </div>
-        <label for="btn menu">
+        <label for="btn-menu">
              <img class="btn-menu" src="./hamburger.png" alt="menu">
             </label>
             <input id="btn-menu" type="checkbox" />
@@ -27,7 +27,7 @@
         </ul>
         </div>
         <div class="social-list">
-        <ul id="btn-menu">
+        <ul id="btn-menu" class="list">
             <li>
                 <a href="https://www.facebook.com/" target="_blank">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="facebook" />
